@@ -320,7 +320,7 @@ class DisconnectProbeThread extends Thread {
 
 	void shutdown() {
 		try {
-			queue.put(new Boolean(true));
+			queue.put(Boolean.valueOf(true));
 		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
@@ -687,7 +687,7 @@ public abstract class IPConnectionBase implements java.io.Closeable {
 	 * is not enabled at all on the Brick Daemon or the WIFI/Ethernet Extension.
 	 *
 	 * For more information about authentication see
-	 * http://www.tinkerforge.com/en/doc/Tutorials/Tutorial_Authentication/Tutorial.html
+	 * https://www.tinkerforge.com/en/doc/Tutorials/Tutorial_Authentication/Tutorial.html
 	 */
 	public void authenticate(String secret) throws TinkerforgeException {
 		synchronized (authenticationMutex) {
